@@ -1,3 +1,8 @@
+<b>Version 2.4.3:</b><br/><br/>
+    &#8226; Force external browser for translations<br/>
+    &#8226; Fix top tweets on trends<br/>
+<br/><br/>
+
 <b>Version 2.4.2:</b><br/><br/>
     &#8226; Android Wear support<br/>
     &#8226; Improved list member viewing<br/>
